--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-<script src="p5.min.js"></script>
-<script src="test.js"></script>
-
-
+<a href="6x6.html">6x6</a><br>
+<a href="9x9.html">9x9</a><br>
+<a href="19x19.html">19x19</a><br>
